unpackaged/main/default/objects/Transactions_csv__dlm/Transactions_csv__dlm.object-meta.xml
<CustomObject>
    <label>Transactions.csv</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Transactions.csv</labelOverride>
        <masterLabel>Transactions.csv</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>