unpackaged/main/default/objects/Transactions_csv__dlm/fields/accepted_flag__c.field-meta.xml
<CustomField>
    <fullName>accepted_flag__c</fullName>
    <label>accepted_flag</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>accepted_flag</labelOverride>
        <masterLabel>accepted_flag</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>