unpackaged/main/default/objects/Transactions_csv__dlm/fields/account_id__c.field-meta.xml
<CustomField>
    <fullName>account_id__c</fullName>
    <label>account_id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>account_id</labelOverride>
        <masterLabel>account_id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>