unpackaged/main/default/objects/Transactions_csv__dlm/fields/amount_local__c.field-meta.xml
<CustomField>
    <fullName>amount_local__c</fullName>
    <label>amount_local</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>amount_local</labelOverride>
        <masterLabel>amount_local</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>