unpackaged/main/default/objects/Transactions_csv__dlm/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>channel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>channel</labelOverride>
        <masterLabel>channel</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>