unpackaged/main/default/objects/Transactions_csv__dlm/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>client_id</labelOverride>
        <masterLabel>client_id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>