unpackaged/main/default/objects/Transactions_csv__dlm/fields/conversion_rate_band__c.field-meta.xml
<CustomField>
    <fullName>conversion_rate_band__c</fullName>
    <label>conversion_rate_band</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>conversion_rate_band</labelOverride>
        <masterLabel>conversion_rate_band</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>