unpackaged/main/default/objects/Transactions_csv__dlm/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <label>currency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>currency</labelOverride>
        <masterLabel>currency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>