unpackaged/main/default/objects/Transactions_csv__dlm/fields/KQ_client_id__c.field-meta.xml
<CustomField>
    <fullName>KQ_client_id__c</fullName>
    <label>Key Qualifier client_id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier client_id</labelOverride>
        <masterLabel>Key Qualifier client_id</masterLabel>
        <refAttrDeveloperName>KQ_client_id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>