unpackaged/main/default/objects/Transactions_csv__dlm/fields/KQ_transaction_id__c.field-meta.xml
<CustomField>
    <fullName>KQ_transaction_id__c</fullName>
    <label>Key Qualifier transaction_id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Key Qualifier transaction_id</labelOverride>
        <masterLabel>Key Qualifier transaction_id</masterLabel>
        <refAttrDeveloperName>KQ_transaction_id</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>