unpackaged/main/default/objects/Transactions_csv__dlm/fields/lead_source__c.field-meta.xml
<CustomField>
    <fullName>lead_source__c</fullName>
    <label>lead_source</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>lead_source</labelOverride>
        <masterLabel>lead_source</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>