unpackaged/main/default/objects/Transactions_csv__dlm/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>product</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>product</labelOverride>
        <masterLabel>product</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>