unpackaged/main/default/objects/Transactions_csv__dlm/fields/rel_1770765102040_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1770765102040_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transactions_csv_account_id_map_ssot_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>Transactions_csv_account_id_map_ssot_rel</relationshipLabel>
    <relationshipName>rel_1770765102040_end</relationshipName>
    <type>Lookup</type>
</CustomField>