unpackaged/main/default/objects/Transactions_csv__dlm/fields/rel_1770765104129_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1770765104129_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transactions_csv_client_id_map_ssot__rel</label>
    <referenceTo>ssot__ContactPoint__dlm</referenceTo>
    <relationshipLabel>Transactions_csv_client_id_map_ssot__rel</relationshipLabel>
    <relationshipName>rel_1770765104129_end</relationshipName>
    <type>Lookup</type>
</CustomField>