unpackaged/main/default/objects/Transactions_csv__dlm/fields/response_time_min__c.field-meta.xml
<CustomField>
    <fullName>response_time_min__c</fullName>
    <label>response_time_min</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>response_time_min</labelOverride>
        <masterLabel>response_time_min</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>