unpackaged/main/default/objects/Transactions_csv__dlm/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>stage</labelOverride>
        <masterLabel>stage</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>