unpackaged/main/default/objects/Transactions_csv__dlm/fields/trade_date__c.field-meta.xml
<CustomField>
    <fullName>trade_date__c</fullName>
    <label>trade_date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>trade_date</labelOverride>
        <masterLabel>trade_date</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>