unpackaged/main/default/objects/Transactions_csv__dlm/fields/transaction_id__c.field-meta.xml
<CustomField>
    <fullName>transaction_id__c</fullName>
    <label>transaction_id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>transaction_id</labelOverride>
        <masterLabel>transaction_id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>